--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "library",
 	"minimum-stability": "dev",
 	"prefer-stable": true,
-	"license": "mit",
+	"license": "MIT",
 	"authors": [
 		{
 			"name": "Andreas Sundqvist",
@@ -11,7 +11,7 @@
 		}
 	],
 	"require": {
-		"php": "^8.0",
+		"php": "^8.2",
 		"ext-ds": "*"
 	},
 	"autoload": {
@@ -19,5 +19,5 @@
 			"Stefna\\Collection\\": "src/"
 		}
 	},
-	"description": ""
+	"description": "Common collection classes for stefna"
 }
