--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -57,7 +57,7 @@ jobs:
 
     steps:
       - name: "Set up PHP"
-        uses: "shivammathur/setup-php@2"
+        uses: "shivammathur/setup-php@v2"
         with:
           php-version: "8.2"
           extensions: "ds"
