--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
 		"ext-ds": "*"
 	},
 	"require-dev": {
-		"squizlabs/php_codesniffer": "dev-master",
-		"stefna/codestyle": "^1.12",
-		"phpstan/phpstan": "^1.8",
+		"squizlabs/php_codesniffer": "^3.9",
+		"stefna/codestyle": "^1.15",
+		"phpstan/phpstan": "^1.10",
 		"bnf/phpstan-psr-container": "^1.0",
 		"phpunit/phpunit": "^10.0",
 		"phpstan/phpstan-phpunit": "^1.1",
 		"tomasvotruba/type-coverage": "^0.0.7",
-		"phpstan/extension-installer": "^1.2"
+		"phpstan/extension-installer": "^1.3"
 	},
 	"autoload": {
 		"psr-4": {
