--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
 	"require-dev": {
 		"squizlabs/php_codesniffer": "^3.9",
 		"stefna/codestyle": "^1.15",
-		"phpstan/phpstan": "^1.10",
+		"phpstan/phpstan": "^2.1",
 		"bnf/phpstan-psr-container": "^1.0",
 		"phpunit/phpunit": "^10.5",
-		"phpstan/phpstan-phpunit": "^1.1",
-		"tomasvotruba/type-coverage": "^0.3 || ^1.0",
+		"phpstan/phpstan-phpunit": "^2.0",
+		"tomasvotruba/type-coverage": "^2.0",
 		"phpstan/extension-installer": "^1.3"
 	},
 	"autoload": {
